[package]
name = "blink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
  "sample",
  "blink_contract",
  "blink_impl",
]

[dependencies]
blink_contract = { path = "blink_contract" }
blink_impl = { path = "blink_impl" }
sample = { path = "sample" }